--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.28.0",
+        "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+        "@vue/babel-preset-jsx": "^1.1.0",
         "core-js": "^3.0.0",
         "node-sass": "^4.12.0",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^7.0.1",
+        "vue": "^2.6.10",
+        "vue-loader": "^15.0.11",
+        "vue-template-compiler": "^2.6.10",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
